[package]
name = "scape-vh"
version = "0.1.0"
authors = ["marc1 <mvrcys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.17.5", features = ["event-stream"] }
tokio = { version = "0.2.21", features = ["macros", "stream", "sync", "rt-threaded", "time"] }
